--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
 - static class implementation (Math class example)
 - property promtion
-- getter setters
+- getter setters / __get(), __set()
+- toString(), __destruct()
